Infra-Clinic/k8s-manifests/development/api-fila-d/api-fila-d-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-fila-d
  namespace: ptcc-development
  labels:
    app: api-fila-d
    project: "ProntClinic"
    environment: "development"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-fila-d
  template:
    metadata:
      labels:
        app: api-fila-d
    spec:
      containers:
      - name: evolution-api
        image: atendai/evolution-api:v2.2.0
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        
        livenessProbe:
          httpGet:
            path: /manager/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        
        readinessProbe:
          httpGet:
            path: /manager/health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
