Infra-Clinic/k8s-manifests/development/api-fila-d/api-fila-d-combined-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-fila-d-combined-service
  namespace: ptcc-development
  labels:
    app: api-fila-d-combined
    project: "ProntClinic"
    environment: "development"
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 6379
    targetPort: 6379
    protocol: TCP
    name: redis
  selector:
    app: api-fila-d-combined
