Infra-Clinic/k8s-manifests/development/api-fila-d/api-fila-d-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-fila-d-redis-service
  namespace: ptcc-development
  labels:
    app: api-fila-d-redis
    project: "ProntClinic"
    environment: "development"
    component: "redis"
spec:
  selector:
    app: api-fila-d-redis
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
    protocol: TCP
  type: ClusterIP
